--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=bookStore
 server.port = 8081
-spring.r2dbc.url=r2dbc:mysql://localhost:3306/boot_work
-spring.r2dbc.username=root
-spring.r2dbc.password=Murikhau94
+spring.r2dbc.url=${db_url}
+spring.r2dbc.username=${db_username}
+spring.r2dbc.password=${db_password}
